fixed bug #9957: CSS tag vertical-align baseline causes text content to align at bottom
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@39236 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -169,6 +169,10 @@ img {
 	vertical-align: middle;
 }
 
+tr, td {
+    vertical-align: top;
+}
+
 @media print {
   h1, h2, h3,
   h4, h5, h6    { page-break-after: avoid }
